<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_register"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context="com.credittrackr.application.activity.AddCardActivity">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <EditText
                android:id="@+id/cardNumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:hint="@string/cardNumber"
                android:inputType="number"
                android:maxLength="16"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <!-- <EditText
                android:id="@+id/cardType"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:hint="@string/cardType"
                android:padding="10dp"
                android:singleLine="true"
                android:inputType="textCapWords"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <EditText
                android:id="@+id/bank"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:hint="@string/bank"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" /> -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Text Label -->
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="Card Type:"
                    android:textColor="@color/white" />

                <!-- Spinner Element -->
                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/cardType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <EditText
                android:id="@+id/cardTypeOther"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:hint="@string/cardType"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Text Label -->
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dip"
                    android:text="Bank:"
                    android:textColor="@color/white" />

                <!-- Spinner Element -->
                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/bank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                />
            </LinearLayout>

            <EditText
                android:id="@+id/bankOther"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:hint="@string/bank"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint"
                android:visibility="gone" />

            <EditText
                android:id="@+id/interestRate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/input_register_bg"
                android:hint="@string/interestRate"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <EditText
                android:id="@+id/startDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/startDate"
                android:inputType="date"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <EditText
                android:id="@+id/endDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/endDate"
                android:inputType="date"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <EditText
                android:id="@+id/expirationDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/expirationDate"
                android:inputType="date"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <EditText
                android:id="@+id/maximumLimit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:hint="@string/maximumLimit"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <!-- Login Button -->

            <Button
                android:id="@+id/btnAddCard"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="#ea4c88"
                android:text="@string/add"
                android:textColor="@color/white" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>